Fix bug #17997 (Warning when switch & reference are combined)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@142004 c90b9560-bf6c-de11-be94-00142212c4b1